--- a/hackathonvolunteer-certificates.html
+++ b/hackathonvolunteer-certificates.html
@@ -179,6 +179,13 @@
         Pick the event you attended to open its certificate page.
       </p>
 
+        <div class="portal-grid"></div>
+        <a class="portal-btn" href="https://codecrunchglobal.vercel.app/hackathonvolunteer-certificates-2026-hackfiestamiamifeb2026.html">
+          <span>🏆 Hack Fiesta Miami Edition Feb 2026 — Session A & B</span>
+          <!-- <small>Open certificate portal soon - We are preparing it for you</small> -->
+          <small>Open certificate portal</small>
+        </a> 
+
        <div class="portal-grid"></div>
         <a class="portal-btn" href="https://codecrunchglobal.vercel.app/hackathonvolunteer-certificates-305jan2026.html">
           <span>🏆 305 Hackathon: Jan 2026 — Session A & B</span>
