--- a/hackathonvolunteer-certificates-305jan2026.html
+++ b/hackathonvolunteer-certificates-305jan2026.html
@@ -180,7 +180,7 @@
   <main class="container">
     <!-- CERTIFICATE GENERATOR -->
     <section class="surface" id="certificate-generator">
-      <h2 class="card-title" style="text-align:center">GENERATE YOUR CERTIFICATE • 305Hackathon Edition 2026 Session A & B</h2>
+      <h2 class="card-title" style="text-align:center">GENERATE YOUR CERTIFICATE • 305Hackathon Edition January 2026 Session A & B</h2>
       <p class="card-description" style="text-align:center">[ OFFICIAL CERTIFICATE ] — Download your volunteer certificate using your registered email address</p>
 
       <label for="certificateEmailInput" class="sr-only">Registered email address</label>
