--- a/2026-hackfiestamiamifeb2026.html
+++ b/2026-hackfiestamiamifeb2026.html
@@ -1024,7 +1024,7 @@
       perks: 'https://hackuniversity-hackathons.vercel.app/',
       prizes: 'https://github.com/CODE-CRUNCH-CLUB/event-prizes/blob/main/2026-hackfiestamiami-hackathon-SA-&-SB-FEB-2026.md',
       photoAlbum: 'https://photos.app.goo.gl/QaQsG1Ck32TRofBb8',
-      mentorsschedule: 'https://hackuniversity-discord.vercel.app/',
+      mentorsschedule: 'https://docs.google.com/spreadsheets/d/e/2PACX-1vSgbPXzckg0CuzSfRkglzORTIar5ppgDjp30ttRwEScl9Qr9iloZlv2NxzoMfnSdUfRI5cp2rknlNSA/pubhtml?gid=0&single=true',
 
       // Registration platforms (PLACEHOLDERS - update)
       devpost: 'https://305hackfeb2026.devpost.com/',
