--- a/hackuniversity-calendar.html
+++ b/hackuniversity-calendar.html
@@ -366,23 +366,35 @@
 
       <!-- ✅ GOOGLE CALENDAR MOVED: AFTER ORG CALENDARS -->
       <div class="bg-white rounded-2xl p-6 shadow-lg border border-gray-200 mb-16">
-        <h2 class="text-2xl font-bold text-gray-800 mb-2 text-center">Live Hack University Google Calendar</h2>
-        <h3 class="text-2xl font-bold text-gray-800 mb-2 text-center">Google Developer group at FIU (GDG at FIU) x Code Crunch WordWide x ColorStack at FIU x CAHSI at FIU x Raspberry Pi Code Crunch</h3>
-        <p class="text-sm text-gray-600 text-center mb-4">
-            Use this live <strong>Google Calendar</strong> view to confirm that a Hack University event is scheduled, including the room location and whether the Zoom meeting is active
-            <strong>right now or starting soon</strong> before you click “Join Zoom Meeting.”
+        <h2 class="text-2xl font-bold text-gray-800 mb-2 text-center">
+          Big Tech Community Live Calendar - Hack University 
+        </h2>
 
+        <p class="text-sm text-gray-600 text-center mb-4 max-w-3xl mx-auto">
+          One shared calendar for events hosted across our partner organizations:
+          <a href="https://gdgatfiu.vercel.app/" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline">GDG at FIU</a>,
+          <a href="https://codecrunchglobal.vercel.app/" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline">Code Crunch</a>,
+          <a href="https://colorstackatfiu.vercel.app/" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline">ColorStack at FIU</a>,
+          <a href="https://cahsiatfiu.vercel.app/" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline">CAHSI at FIU</a>, and
+          <a href="https://raspberrypicodecrunch.vercel.app/" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline">Raspberry Pi Code Crunch</a>.
         </p>
+
+        <p class="text-sm text-gray-600 text-center mb-4 max-w-3xl mx-auto">
+          Use this live <strong>Google Calendar</strong> view to confirm that a Hack University event is scheduled, including the room location and whether the Zoom meeting is active
+          <strong>right now or starting soon</strong> before you click “Join Zoom Meeting.”
+        </p>
+
         <div class="flex justify-center">
           <iframe
-            title="Hack University Google Calendar"
-                src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FNew_York&showPrint=0&mode=AGENDA&src=ODRjNGQ2NTA0NTA1OTdjNTkyZTc0ZThmNWZlODUxMzAxZjYwYTkyZjMwYmI1OTM2ODA5OTk3ODFkZmFjYWIxMkBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23d50000"
-                allowfullscreen
-                loading="lazy"
+            title="Big Tech Community Google Calendar"
+            src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FNew_York&showPrint=0&mode=AGENDA&src=ODRjNGQ2NTA0NTA1OTdjNTkyZTc0ZThmNWZlODUxMzAxZjYwYTkyZjMwYmI1OTM2ODA5OTk3ODFkZmFjYWIxMkBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23d50000"
             class="calendar-iframe"
             frameborder="0"
-            scrolling="no">
+            scrolling="no"
+            loading="lazy"
+            allowfullscreen>
           </iframe>
+        </div>
         </div>
       </div>
 
