--- a/hackuniversity-calendar.html
+++ b/hackuniversity-calendar.html
@@ -42,7 +42,7 @@
     .calendar-iframe {
       width: 100%;
       max-width: 100%;
-      height: 600px;
+      height: 1200px;
       border-radius: 12px;
       box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
       border: solid 1px #777; /* matches your embed style */
@@ -123,7 +123,7 @@
       <p class="text-lg text-white/80 max-w-3xl mx-auto mb-6">
         Use this page to join the Hack University Zoom for hybrid and virtual sessions.
         <span class="font-semibold">
-          Before joining Zoom, please check the Hack University Google Calendar and Luma Calendar below
+          Before joining Zoom, please check & subcribe the Hack University Google Calendar below
         </span>
         to confirm that a Hack University hybrid or online event is currently scheduled.
       </p>
@@ -140,7 +140,7 @@
 
         <p class="text-sm text-white/80 max-w-xl">
           🔔 Tip: If you don’t see a Hack University event happening right now on the embedded
-          <strong>Google Calendar</strong> or listed on the <strong>Luma Calendar</strong>,
+          <strong>Google Calendar</strong>,
           there might not be an event currently scheduled — please note that all events take place in Eastern Time (EST).
         </p>
       </div>
@@ -153,13 +153,40 @@
 
       <!-- Hack University Main Calendar -->
       <div class="mb-8 text-center">
-        <h2 class="text-2xl font-bold text-gray-800 mb-4">Step 1: Check the Hack University Calendar</h2>
+        <h2 class="text-2xl font-bold text-gray-800 mb-4">🔔 Google Calendar Tips</h2>
+
         <p class="text-gray-600 max-w-2xl mx-auto mb-6">
-          Before joining Zoom, use the links below to verify that there is an active or upcoming
-          <strong>Hack University hybrid or virtual session</strong> on either our
-          <strong>Luma Calendar</strong> or <strong>Google Calendar</strong>.
-          If nothing is listed on either calendar, there may not be a public event happening at this time.
+          #1 – Please note that all events take place in <strong>Eastern Time (ET)</strong>, Miami, FL, USA.
         </p>
+
+        <p class="text-gray-600 max-w-2xl mx-auto mb-6">
+          #2 – Before joining Zoom, open the <strong>Google Calendar</strong> to verify that there is an active or upcoming
+          <strong>in-person, hybrid, or virtual session</strong>. Our <strong>Google Calendar</strong> events include important details
+          such as event location or any additional forms required, if applicable.
+          If nothing is listed on the calendar, there may not be a public event happening at this time.
+        </p>
+
+        <p class="text-gray-600 max-w-2xl mx-auto mb-6">
+          #3 – If you have any questions about the event schedule, please reach out to us on
+          <a href="https://www.linkedin.com/company/codecrunchworldwide"
+            class="text-blue-600 underline hover:text-blue-800"
+            target="_blank" rel="noopener noreferrer">
+            LinkedIn
+          </a>
+          (fastest response),
+          <a href="https://hackuniversityplatforms.vercel.app/"
+            class="text-blue-600 underline hover:text-blue-800"
+            target="_blank" rel="noopener noreferrer">
+            Instagram Group Chat
+          </a>,
+          or
+          <a href="https://hackuniversityplatforms.vercel.app/"
+            class="text-blue-600 underline hover:text-blue-800"
+            target="_blank" rel="noopener noreferrer">
+            GroupMe
+          </a>.
+        </p>
+
 
         <div class="flex flex-wrap justify-center gap-4 mb-8">
 
@@ -183,9 +210,47 @@
         </div>
       </div>
 
+
+
+
+       <!-- ✅ GOOGLE CALENDAR MOVED: AFTER ORG CALENDARS -->
+      <div class="bg-white rounded-2xl p-6 shadow-lg border border-gray-200 mb-16">
+        <h2 class="text-2xl font-bold text-gray-800 mb-2 text-center">
+          Big Tech Community Live Calendar - Hack University 
+        </h2>
+
+        <p class="text-sm text-gray-600 text-center mb-4 max-w-3xl mx-auto">
+          One shared calendar for events hosted across our partner organizations:
+          <a href="https://gdgatfiu.vercel.app/" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline">GDG at FIU</a>,
+          <a href="https://codecrunchglobal.vercel.app/" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline">Code Crunch</a>,
+          <a href="https://colorstackatfiu.vercel.app/" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline">ColorStack at FIU</a>,
+          <a href="https://cahsiatfiu.vercel.app/" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline">CAHSI at FIU</a>, and
+          <a href="https://raspberrypicodecrunch.vercel.app/" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline">Raspberry Pi Code Crunch</a>.
+        </p>
+
+        <p class="text-sm text-gray-600 text-center mb-4 max-w-3xl mx-auto">
+          Use this live <strong>Google Calendar</strong> view to confirm that a Hack University event is scheduled, including the room location and whether the Zoom meeting is active
+          <strong>right now or starting soon</strong> before you click “Join Zoom Meeting.”
+        </p>
+
+        <div class="flex justify-center">
+          <iframe
+            title="Big Tech Community Google Calendar"
+            src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FNew_York&showPrint=0&mode=AGENDA&src=ODRjNGQ2NTA0NTA1OTdjNTkyZTc0ZThmNWZlODUxMzAxZjYwYTkyZjMwYmI1OTM2ODA5OTk3ODFkZmFjYWIxMkBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23d50000"
+            class="calendar-iframe"
+            frameborder="0"
+            scrolling="no"
+            loading="lazy"
+            allowfullscreen>
+          </iframe>
+        </div>
+        </div>
+      </div>
+
+
       <!-- Partner calendars heading -->
       <div class="mb-8">
-        <h2 class="text-2xl font-bold text-gray-800 mb-2 text-center">Partners Luma Calendars</h2>
+        <h2 class="text-2xl font-bold text-gray-800 mb-2 text-center">Partners Calendars</h2>
         <p class="text-gray-600 text-sm text-center mb-2 max-w-2xl mx-auto">
           Stay up to date with events from all our partner organizations in the Hack University ecosystem.
         </p>
@@ -364,39 +429,7 @@
 
       </div>
 
-      <!-- ✅ GOOGLE CALENDAR MOVED: AFTER ORG CALENDARS -->
-      <div class="bg-white rounded-2xl p-6 shadow-lg border border-gray-200 mb-16">
-        <h2 class="text-2xl font-bold text-gray-800 mb-2 text-center">
-          Big Tech Community Live Calendar - Hack University 
-        </h2>
-
-        <p class="text-sm text-gray-600 text-center mb-4 max-w-3xl mx-auto">
-          One shared calendar for events hosted across our partner organizations:
-          <a href="https://gdgatfiu.vercel.app/" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline">GDG at FIU</a>,
-          <a href="https://codecrunchglobal.vercel.app/" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline">Code Crunch</a>,
-          <a href="https://colorstackatfiu.vercel.app/" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline">ColorStack at FIU</a>,
-          <a href="https://cahsiatfiu.vercel.app/" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline">CAHSI at FIU</a>, and
-          <a href="https://raspberrypicodecrunch.vercel.app/" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline">Raspberry Pi Code Crunch</a>.
-        </p>
-
-        <p class="text-sm text-gray-600 text-center mb-4 max-w-3xl mx-auto">
-          Use this live <strong>Google Calendar</strong> view to confirm that a Hack University event is scheduled, including the room location and whether the Zoom meeting is active
-          <strong>right now or starting soon</strong> before you click “Join Zoom Meeting.”
-        </p>
-
-        <div class="flex justify-center">
-          <iframe
-            title="Big Tech Community Google Calendar"
-            src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FNew_York&showPrint=0&mode=AGENDA&src=ODRjNGQ2NTA0NTA1OTdjNTkyZTc0ZThmNWZlODUxMzAxZjYwYTkyZjMwYmI1OTM2ODA5OTk3ODFkZmFjYWIxMkBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23d50000"
-            class="calendar-iframe"
-            frameborder="0"
-            scrolling="no"
-            loading="lazy"
-            allowfullscreen>
-          </iframe>
-        </div>
-        </div>
-      </div>
+     
 
     </div>
   </section>
