--- a/hackuniversity.html
+++ b/hackuniversity.html
@@ -409,7 +409,7 @@
 <!-- FIXED EVENT CLOCK BAR (Always Visible, BELOW NAVBAR) -->
 <div class="event-clock-bar" role="status" aria-label="Event Clock — Eastern Time">
   <span class="event-clock-label">
-    Event Clock — <strong>Eastern Time (ET)</strong> · Miami, FL
+    Organization Clock — <strong>Eastern Time (ET)</strong> · Miami, FL
   </span>
   <span id="et-clock" class="event-clock-time"></span>
   <span class="event-clock-date">(<span id="et-date"></span>)</span>
