--- a/hackuniversity.html
+++ b/hackuniversity.html
@@ -371,7 +371,7 @@
         href="https://hackuniversity.vercel.app/"
         class="brand-url"
       >
-        HackUniversity.vercel.app
+        HackUniversity.vercel.app / Home
       </a>
     </div>
 
