--- a/hackuniversity.html
+++ b/hackuniversity.html
@@ -474,7 +474,7 @@
         </a>
 
         <a class="btn btn-light"
-           href="https://photos.app.goo.gl/71FC5SLTQcPRbXjx6"
+           href="https://hackuniversity-photos.vercel.app/"
            target="_blank"
            rel="noopener noreferrer"
            aria-label="Hack University Photo Album (Google Photos)">
