--- a/hackathonvolunteer-APP-status-2026-hackfiestafeb2026.html
+++ b/hackathonvolunteer-APP-status-2026-hackfiestafeb2026.html
@@ -471,7 +471,7 @@
   <main class="container">
     <!-- Header -->
     <section class="header">
-      <h1>Volunteer Application Status &amp; Access Portal [305 Hackathon Edition January 2026]</h1>
+      <h1>Volunteer Application Status &amp; Access Portal [Hack Fiesta Miami February 2026]</h1>
       <p class="subtitle">
         After authentication, volunteers can review their registration details and access volunteer-only tools.
       </p>
