--- a/hackathonvolunteer-APP-status-2026-hackfiestafeb2026.html
+++ b/hackathonvolunteer-APP-status-2026-hackfiestafeb2026.html
@@ -729,7 +729,13 @@
             ? safeText(entry.discordInstructions).replace(/\n/g, '<br/>')
             : `<div class="muted-note">Discord instructions will appear here if included for your event.</div>`
           }
-                <div style="margin-top:15px; text-align:center; color:#cbd5e1; font-size:0.9em;">
+          <div style="margin-top:15px; text-align:center; color:#cbd5e1; font-size:0.9em;">
+                  Find event details on HackUniversity.vercel.app -> Select Hackathons on the menu -> Click your event's page<br/>
+                  Zoom link is available on on HackUniversity.vercel.app -> Select Calendar on the menu -> Click on Zoom button<br/>
+                  Live Demos ususally take place at 8pm EST on the day of the event. The event Agenda will be posted on the event page. If the time changes of there is a delay it will be announced on the Discord server announcement channel and private volunteer channel.
+                </div>
+          
+          <div style="margin-top:15px; text-align:center; color:#cbd5e1; font-size:0.9em;">
                   Questions ? Message us on Linkedin with Ticked ID
                 </div>
               </div>`;
