--- a/hackathonvolunteer-APP-status-2026-hackfiestafeb2026.html
+++ b/hackathonvolunteer-APP-status-2026-hackfiestafeb2026.html
@@ -734,7 +734,7 @@
                   Zoom link is available on on HackUniversity.vercel.app -> Select Calendar on the menu -> Click on Zoom button<br/>
                   Live Demos ususally take place at 8pm EST on the day of the event. The event Agenda will be posted on the event page. If the time changes of there is a delay it will 
                   be announced on the Discord server announcement channel and private volunteer channel.<br/>
-                  Thank you for volunteering and supporting the hackathon! We look forward to an amazing event together!
+                  Thank you for supporting the hackathon! We look forward to an amazing event together!
                 </div>
           
           <div style="margin-top:15px; text-align:center; color:#cbd5e1; font-size:0.9em;">
