--- a/hackathonvolunteer-wiki.html
+++ b/hackathonvolunteer-wiki.html
@@ -1030,8 +1030,8 @@
         formNo2State: true,
         formNo2Url: 'https://docs.google.com/forms/d/e/1FAIpQLSeq5MG-EJ0OTVAR3IA2jv99hqHpQexSAJ_LHlDsMbFbM3vcWg/viewform?usp=dialog',
 
-        reviewTicketState: false,
-        reviewTicketUrl: VOLUNTEER_PORTAL_URL
+        reviewTicketState: true,
+        reviewTicketUrl: "https://codecrunchglobal.vercel.app/hackathonvolunteer-APP-status-2026-hackfiestamiami.html"
       },
       {
         
@@ -1051,8 +1051,8 @@
         formNo2State: true,
         formNo2Url: 'https://docs.google.com/forms/d/e/1FAIpQLSeq5MG-EJ0OTVAR3IA2jv99hqHpQexSAJ_LHlDsMbFbM3vcWg/viewform?usp=dialog',
 
-        reviewTicketState: false,
-        reviewTicketUrl: VOLUNTEER_PORTAL_URL
+        reviewTicketState: true,
+        reviewTicketUrl: "https://codecrunchglobal.vercel.app/hackathonvolunteer-APP-status-2026-hackfiestamiami.html"
       },
 
       {
