--- a/hackuniversity-hackathons.html
+++ b/hackuniversity-hackathons.html
@@ -1038,10 +1038,10 @@
         url: 'https://codecrunchglobal.vercel.app/2026-hackfiestamiamifeb2026.html',
         registrationViaOneStop: true,
         agendaEnable: true, agendaUrl: "https://github.com/CODE-CRUNCH-CLUB/event-agenda/blob/main/2026-hackfiesta-hackathon-SA-&-SB-FEB-2026.md",
-        perksEnable: false, perksUrl: "https://",
-        photoAlbumEnable: false, photoAlbumUrl: "https://photos.app.goo.gl/QaQsG1Ck32TRofBb8https://",
-        mentorScheduleEnable: false, mentorScheduleUrl: "https://docs.google.com/spreadsheets/d/e/2PACX-1vSgbPXzckg0CuzSfRkglzORTIar5ppgDjp30ttRwEScl9Qr9iloZlv2NxzoMfnSdUfRI5cp2rknlNSA/pubhtml?gid=0&single=true",
-        prizesEnable: false, prizesUrl: "https://github.com/CODE-CRUNCH-CLUB/event-prizes/blob/main/2026-hackfiestamiami-hackathon-SA-&-SB-FEB-2026.md"
+        perksEnable:  true, perksUrl: "https://",
+        photoAlbumEnable:  true, photoAlbumUrl: "https://photos.app.goo.gl/QaQsG1Ck32TRofBb8https://",
+        mentorScheduleEnable:  true, mentorScheduleUrl: "https://docs.google.com/spreadsheets/d/e/2PACX-1vSgbPXzckg0CuzSfRkglzORTIar5ppgDjp30ttRwEScl9Qr9iloZlv2NxzoMfnSdUfRI5cp2rknlNSA/pubhtml?gid=0&single=true",
+        prizesEnable:  true, prizesUrl: "https://github.com/CODE-CRUNCH-CLUB/event-prizes/blob/main/2026-hackfiestamiami-hackathon-SA-&-SB-FEB-2026.md"
       },
       {
 
@@ -1056,10 +1056,10 @@
         url: 'https://codecrunchglobal.vercel.app/2026-hackfiestamiamifeb2026.html',
         registrationViaOneStop: true,
         agendaEnable: true, agendaUrl: "https://github.com/CODE-CRUNCH-CLUB/event-agenda/blob/main/2026-hackfiesta-hackathon-SA-&-SB-FEB-2026.md",
-        perksEnable: false, perksUrl: "https://",
-        photoAlbumEnable: false, photoAlbumUrl: "https://photos.app.goo.gl/QaQsG1Ck32TRofBb8https://",
-        mentorScheduleEnable: false, mentorScheduleUrl: "https://docs.google.com/spreadsheets/d/e/2PACX-1vSgbPXzckg0CuzSfRkglzORTIar5ppgDjp30ttRwEScl9Qr9iloZlv2NxzoMfnSdUfRI5cp2rknlNSA/pubhtml?gid=0&single=true",
-        prizesEnable: false, prizesUrl: "https://github.com/CODE-CRUNCH-CLUB/event-prizes/blob/main/2026-hackfiestamiami-hackathon-SA-&-SB-FEB-2026.md"
+        perksEnable:  true, perksUrl: "https://",
+        photoAlbumEnable:  true, photoAlbumUrl: "https://photos.app.goo.gl/QaQsG1Ck32TRofBb8https://",
+        mentorScheduleEnable:  true, mentorScheduleUrl: "https://docs.google.com/spreadsheets/d/e/2PACX-1vSgbPXzckg0CuzSfRkglzORTIar5ppgDjp30ttRwEScl9Qr9iloZlv2NxzoMfnSdUfRI5cp2rknlNSA/pubhtml?gid=0&single=true",
+        prizesEnable:  true, prizesUrl: "https://github.com/CODE-CRUNCH-CLUB/event-prizes/blob/main/2026-hackfiestamiami-hackathon-SA-&-SB-FEB-2026.md"
       },
 
       // March 2026
